Reward And Recognition System 2.0/force-app/main/default/objects/Employee__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <label>Employee Id</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>