Reward And Recognition System 2.0/force-app/main/default/objects/Employee__c/fields/Employee_Image__c.field-meta.xml
<CustomField>
    <fullName>Employee_Image__c</fullName>
    <label>Employee Image</label>
    <type>Url</type>
</CustomField>