Reward And Recognition System 2.0/force-app/main/default/objects/Employee__c/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <label>JobTitle</label>
    <length>250</length>
    <type>Text</type>
</CustomField>