Reward And Recognition System 2.0/force-app/main/default/objects/Employee__c/fields/Metacube_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Metacube_Employee_Id__c</fullName>
    <label>Metacube Employee Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>