Reward And Recognition System 2.0/force-app/main/default/objects/Employee__c/fields/Monetization_Points__c.field-meta.xml
<CustomField>
    <fullName>Monetization_Points__c</fullName>
    <formula>Roll_Up_Total_Points__c-Roll_Up_Employee_Reward__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monetization Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>