Reward And Recognition System 2.0/force-app/main/default/objects/Employee__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <length>250</length>
    <type>Text</type>
</CustomField>