Reward And Recognition System 2.0/force-app/main/default/objects/Employee__c/fields/Roll_Up_Employee_Reward__c.field-meta.xml
<CustomField>
    <fullName>Roll_Up_Employee_Reward__c</fullName>
    <label>Roll Up Employee Reward</label>
    <summarizedField>Employee_Reward__c.Points_Redeemed__c</summarizedField>
    <summaryForeignKey>Employee_Reward__c.Employee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>