Reward And Recognition System 2.0/force-app/main/default/objects/Employee__c/fields/Roll_Up_Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Roll_Up_Total_Points__c</fullName>
    <label>Roll Up Total Points</label>
    <summarizedField>Employee_Badge__c.Total_Points__c</summarizedField>
    <summaryForeignKey>Employee_Badge__c.Employee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>