Reward And Recognition System 2.0/force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Employee_Id__c</columns>
    <columns>NAME</columns>
    <columns>Roll_Up_Total_Points__c</columns>
    <columns>Is_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>